--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -31,12 +31,19 @@
                 android:calendarViewShown="false"
                 />
         </androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="From"
+            android:fontFamily="@font/poppinsbold"
+            android:layout_marginHorizontal="30dp"
+            android:padding="5dp"
+            android:layout_marginTop="10dp"/>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="20dp"
             app:cardCornerRadius="16dp"
             >
 
@@ -47,13 +54,19 @@
                 android:id="@+id/spinner_asal"
                 android:background="@drawable/spinner"/>
         </androidx.cardview.widget.CardView>
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Destination"
+            android:fontFamily="@font/poppinsbold"
+            android:layout_marginHorizontal="30dp"
+            android:padding="5dp"
+            android:layout_marginTop="10dp"/>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="20dp"
             app:cardCornerRadius="16dp"
             >
             <Spinner
@@ -64,13 +77,19 @@
                 android:background="@drawable/spinner"/>
         </androidx.cardview.widget.CardView>
 
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Class"
+            android:fontFamily="@font/poppinsbold"
+            android:layout_marginHorizontal="30dp"
+            android:padding="5dp"
+            android:layout_marginTop="10dp"/>
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="20dp"
             app:cardCornerRadius="16dp"
             >
 
@@ -235,8 +254,8 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:background="@drawable/btn_blue"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
             android:textColor="@color/white"
             android:textAllCaps="false"
             android:fontFamily="@font/poppinsbold"/>
