--- a/app/src/main/res/layout/activity_plan.xml
+++ b/app/src/main/res/layout/activity_plan.xml
@@ -253,7 +253,7 @@
             android:text="Book Ticket"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:background="@drawable/btn_blue"
+            android:background="@drawable/btn_secondary"
             android:layout_marginHorizontal="25dp"
             android:layout_marginTop="20dp"
             android:textColor="@color/white"
