--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -7,7 +7,8 @@
     tools:context=".RegisterActivity"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="26dp">
+    android:padding="26dp"
+    android:background="@color/primary">
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/edit_txt_username"
             android:hint="Username"
-            android:background="@drawable/input_gray"
+            android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
             android:layout_marginBottom="20dp"
@@ -39,7 +40,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/edit_txt_email"
             android:hint="Email"
-            android:background="@drawable/input_gray"
+            android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
             android:layout_marginBottom="20dp"
@@ -50,7 +51,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/edit_txt_password"
             android:hint="Password"
-            android:background="@drawable/input_gray"
+            android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
             android:layout_marginBottom="20dp"
@@ -61,7 +62,7 @@
             android:layout_height="wrap_content"
             android:hint="Birth Date"
             android:inputType="date"
-            android:background="@drawable/input_gray"
+            android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
             android:textColorHint="#828282"
@@ -74,14 +75,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_register"
         android:text="Register"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:background="@drawable/btn_blue"
+        android:textSize="16sp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="100dp"
         android:textColor="@color/white"
         android:textAllCaps="false"
-        android:fontFamily="@font/poppinsbold"/>
+        android:background="@drawable/btn_secondary"
+        style="@style/button_bold"/>
 </LinearLayout>
 
 
