--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".LoginFragment"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="26dp"
@@ -24,7 +23,7 @@
         android:layout_marginTop="38dp"
         android:layout_marginHorizontal="15dp"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        >
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,8 +43,15 @@
             android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
-            android:layout_marginBottom="20dp"
             android:textColorHint="#828282"/>
+        <CheckBox
+            android:id="@+id/checkBoxRememberMe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ingat Saya"
+            android:paddingTop="1dp"
+            android:textSize="10dp"
+            style="@style/text_regular"/>
 
 
     </LinearLayout>
