--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".RegisterFragment"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="26dp"
@@ -13,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Register"
         android:textSize="30sp"
         android:textStyle="bold"
         android:fontFamily="@font/poppinsbold"
@@ -24,12 +23,22 @@
         android:layout_marginTop="38dp"
         android:layout_marginHorizontal="15dp"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+       >
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/edit_txt_username"
             android:hint="Username"
+            android:background="@drawable/input_white"
+            android:padding="12dp"
+            android:textSize="15sp"
+            android:layout_marginBottom="20dp"
+            android:textColorHint="#828282"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edit_txt_email"
+            android:hint="Email"
             android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
@@ -46,27 +55,32 @@
             android:textSize="15sp"
             android:layout_marginBottom="20dp"
             android:textColorHint="#828282"/>
+        <EditText
+            android:id="@+id/edit_txt_birthdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Birth Date"
+            android:inputType="date"
+            android:background="@drawable/input_white"
+            android:padding="12dp"
+            android:textSize="15sp"
+            android:textColorHint="#828282"
+            android:focusable="false"
+            android:onClick="showDatePickerDialog" />
 
 
     </LinearLayout>
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_login"
-        android:text="Login"
+        android:id="@+id/btn_register"
+        android:text="Register"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:background="@drawable/btn_secondary"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="50dp"
-        style="@style/button_bold"
-        android:textAllCaps="false"/>
+        android:layout_marginTop="100dp"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:background="@drawable/btn_secondary"
+        style="@style/button_bold"/>
 
 </LinearLayout>
-
-
-
-
-
-
-
