--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#CBECF5</color>
+    <color name="secondary">#FF6400</color>
+    <color name="gray">#EBEBEB</color>
 </resources>
