--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#CBECF5</color>
     <color name="secondary">#FF6400</color>
-    <color name="gray">#EBEBEB</color>
+    <color name="gray">#949DA9</color>
+    <color name="gray_50">#F6F6F6</color>
+    <color name="background">#E8EEF4</color>
+    <color name="textfield_border">#79747E</color>
+    <color name="textfield_border_focused">#1D1B20</color>
+    <color name="text_black">#1D1B20</color>
+    <color name="text_black_placeholder">#9ca3af</color>
 </resources>
