--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_navigation_menu"
         android:background="@color/white"
+        app:labelVisibilityMode="unlabeled"
         app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
 
         />
