--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,16 +10,14 @@
     >
 
     <LinearLayout
+        android:id="@+id/layout_atas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:gravity="center"
         >
 
-
         <LinearLayout
-            android:layout_width="130dp"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/btn_outline">
@@ -38,14 +36,16 @@
                 android:gravity="center_vertical"
                 android:layout_marginHorizontal="10dp">
                 <ImageView
-                    android:layout_width="20dp"
                     android:layout_height="20dp"
+                    android:layout_width="20dp"
                     android:src="@drawable/train_station"/>
-            <Spinner
-                android:id="@+id/spinner_asal"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_asal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="40dp"
+                android:textAllCaps="false"
+                android:text="Pilih Stasiun"
                 android:background="@color/white"
                 android:layout_margin="5dp"
               />
@@ -54,6 +54,7 @@
 
 
         <ImageView
+            android:id="@+id/btn_swap"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/rail_symbol"
@@ -62,7 +63,7 @@
            />
 
         <LinearLayout
-            android:layout_width="130dp"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/btn_outline"
@@ -84,33 +85,35 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/train_station"/>
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="40dp"
-                android:id="@+id/spinner_tujuan"
-                android:background="@color/white"
-                android:layout_margin="5dp"
-
-              />
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/button_tujuan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="40dp"
+                    android:textAllCaps="false"
+                    android:text="Pilih Stasiun"
+                    android:background="@color/white"
+                    android:layout_margin="5dp"
+                    />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/layout_bawah"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_below="@+id/layout_atas"
         android:layout_marginTop="20dp"
         >
 
 
         <LinearLayout
-            android:layout_width="130dp"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/btn_outline"
+
             >
             <TextView
                 android:layout_width="match_parent"
@@ -149,17 +152,19 @@
             />
 
         <LinearLayout
-            android:layout_width="130dp"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/btn_outline"
+
             >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tanggal"
+                android:text="Penumpang"
                 android:textSize="12dp"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -169,147 +174,73 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/calendar"/>
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="40dp"
-                android:id="@+id/spinner_tanggal"
-                android:background="@color/white"
-                android:layout_margin="5dp"
+                    android:src="@drawable/baseline_people_alt_24"/>
 
-                />
+                <Spinner
+                    android:id="@+id/spinner_penumpang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="40dp"
+                    android:background="@color/white"
+                    android:layout_margin="5dp"
+                    />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-    <HorizontalScrollView
+    <LinearLayout
+        android:layout_below="@+id/layout_bawah"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:scrollbars="none">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        android:id="@+id/layout_akhir"
+        android:background="@drawable/btn_outline"
+        >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tanggal"
+        android:textSize="12dp"
+        android:padding="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="2dp"
+        android:paddingVertical="3dp">
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/calendar"/>
+        <EditText
+            android:id="@+id/edit_txt_tanggal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-
-            <ToggleButton
-                android:id="@+id/toggleButton1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/toggle_button_background"
-                android:checked="false"
-                android:fontFamily="@font/poppinssemibold"
-                android:paddingHorizontal="15dp"
-                android:text="Plus Lunch"
-                android:textAllCaps="false"
-                android:textOff="Plus Lunch"
-                android:textOn="Plus Lunch"
-                android:textSize="10dp"
-                />
-
-            <ToggleButton
-                android:id="@+id/toggleButton2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Window Seat"
-                android:textOn="Window Seat"
-                android:textOff="Window Seat"
-                android:background="@drawable/toggle_button_background"
-                android:checked="false"
-                android:layout_marginRight="20dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textAllCaps="false"
-                android:paddingHorizontal="15dp"
-                android:textSize="10dp"/>
-
-            <ToggleButton
-                android:id="@+id/toggleButton3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Panoramic Carriage"
-                android:textOn="Panoramic Carriage"
-                android:textOff="Panoramic Carriage"
-                android:background="@drawable/toggle_button_background"
-                android:checked="false"
-                android:layout_marginRight="20dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textAllCaps="false"
-                android:paddingHorizontal="15dp"
-                android:textSize="10dp"/>
-
-            <ToggleButton
-                android:id="@+id/toggleButton4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Plus Dinner"
-                android:textOn="Plus Dinner"
-                android:textOff="Plus Dinner"
-                android:background="@drawable/toggle_button_background"
-                android:checked="false"
-                android:layout_marginRight="20dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textAllCaps="false"
-                android:paddingHorizontal="15dp"
-                android:textSize="10dp"/>
-            <ToggleButton
-                android:id="@+id/toggleButton5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Plus Pillow"
-                android:textOn="Plus Pillow"
-                android:textOff="Plus Pillow"
-                android:background="@drawable/toggle_button_background"
-                android:checked="false"
-                android:layout_marginRight="20dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textAllCaps="false"
-                android:paddingHorizontal="15dp"
-                android:textSize="10dp"/>
-            <ToggleButton
-                android:id="@+id/toggleButton6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Plus Blanket"
-                android:textOn="Plus Blanket"
-                android:textOff="Plus Blanket"
-                android:background="@drawable/toggle_button_background"
-                android:checked="false"
-                android:layout_marginRight="20dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textAllCaps="false"
-                android:paddingHorizontal="15dp"
-                android:textSize="10dp"/>
-            <ToggleButton
-                android:id="@+id/toggleButton7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Extra luggage"
-                android:textOn="Extra luggage"
-                android:textOff="Extra luggage"
-                android:background="@drawable/toggle_button_background"
-                android:checked="false"
-                android:layout_marginRight="20dp"
-                android:fontFamily="@font/poppinssemibold"
-                android:textAllCaps="false"
-                android:paddingHorizontal="15dp"
-                android:textSize="10dp"/>
+            android:hint="dd-mm-yyyy"
+            android:inputType="date"
+            android:background="@drawable/input_white"
+            android:padding="10dp"
+            android:textSize="15sp"
+            android:textColorHint="#828282"
+            android:focusable="false"
+            android:onClick="showDatePickerDialog" />
+    </LinearLayout>
+    </LinearLayout>
 
 
-
-        </LinearLayout>
-    </HorizontalScrollView>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_pesan_tiket"
+        android:id="@+id/btn_cari_tiket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pesan Tiket"
+        android:text="Cari Tiket"
         style="@style/button_bold"
+        android:layout_below="@id/layout_akhir"
         android:textSize="12dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/btn_black"
-        android:layout_marginTop="20dp"/>
-    </LinearLayout>
+       />
+    </RelativeLayout>
 
