--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
    >
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="330dp"
         android:layout_gravity="bottom"
         android:layout_marginTop="260dp"
         android:background="@drawable/bg_rounded_top" />
@@ -40,7 +40,7 @@
                 <TextView
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:text="Selamat Datang di Travel App"
+                    android:text="Selamat Datang di Express Rail"
                    style="@style/text_bold"
                     android:textSize="24dp"
                     android:padding="0dp"
@@ -79,7 +79,9 @@
                     android:layout_marginTop="20dp"
                     android:id="@+id/view_pager"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_gravity="center_horizontal"/>
 
             </LinearLayout>
 
