--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,7 +27,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edit_txt_username"
+            android:id="@+id/edit_txt_email"
             android:hint="Username"
             android:background="@drawable/input_white"
             android:padding="12dp"
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/edit_txt_password"
             android:hint="Password"
+            android:inputType="textPassword"
             android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
