--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -42,6 +42,7 @@
             android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
+            android:inputType="textEmailAddress"
             android:layout_marginBottom="20dp"
             android:textColorHint="#828282"/>
 
@@ -52,6 +53,7 @@
             android:hint="Password"
             android:background="@drawable/input_white"
             android:padding="12dp"
+            android:inputType="textPassword"
             android:textSize="15sp"
             android:layout_marginBottom="20dp"
             android:textColorHint="#828282"/>
