--- a/app/src/main/res/values-v26/style.xml
+++ b/app/src/main/res/values-v26/style.xml
@@ -7,20 +7,20 @@
     </style>
     <style name="text_medium" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/poppinsmedium</item>
-        <item name="android:padding">5dp</item>
+
     </style>
     <style name="text_semibold" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/poppinssemibold</item>
-        <item name="android:padding">5dp</item>
+
     </style>
     <style name="text_bold" parent="Widget.AppCompat.TextView">
         <item name="android:fontFamily">@font/poppinsbold</item>
-        <item name="android:padding">5dp</item>
+
     </style>
     <style name="button_bold" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/poppinsbold</item>
-        <item name="android:padding">12dp</item>
+        <item name="android:padding">1dp</item>
     </style>
     <style name="CalenderViewCustom" parent="Theme.AppCompat">
         <item name="colorControlActivated">@color/secondary</item>
@@ -34,6 +34,24 @@
     </style>
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">@color/primary</item>
+    </style>
+    <style name="EditTextInput" parent="ThemeOverlay.Material3.TextInputEditText">
+        <item name="android:background">@drawable/edit_text_rounded</item>
+        <item name="android:paddingStart">14.5dp</item>
+        <item name="android:paddingEnd">14.5dp</item>
+        <item name="android:textColorHint">@color/text_black_placeholder</item>
+        <item name="android:textSize">14.5sp</item>
+        <item name="android:textColor">@color/text_black</item>
+        <item name="android:textAppearance">@style/text_regular</item>
+    </style>
+
+    <style name="DesignSystem.TextInputEditText" parent="EditTextInput">
+        <item name="android:layout_height">50dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="hintTextColor">@color/text_black_placeholder</item>
+        <item name="android:singleLine">true</item>
     </style>
 
 </resources>
