--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/edit_txt_email"
-            android:hint="Username"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
             android:background="@drawable/input_white"
             android:padding="12dp"
             android:textSize="15sp"
