--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,7 +54,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="@id/guide"
-                    android:src="@drawable/bg_profile"
+                    android:background="@color/primary"
                     android:scaleType="fitXY"/>
                 <ImageView
                     android:id="@+id/img_profil"
@@ -76,14 +76,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="ID Akun"
+                        android:text="Username"
                         android:layout_marginBottom="5dp"
                         style="@style/text_regular"/>
                     <TextView
-                        android:id="@+id/txt_id_profile"
+                        android:id="@+id/txt_id_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="ID Akun"
+                        android:text="Username"
                         style="@style/text_semibold"
                         android:layout_marginBottom="20dp"/>
                     <TextView
