--- a/app/src/main/res/layout/activity_add_ticket.xml
+++ b/app/src/main/res/layout/activity_add_ticket.xml
@@ -204,6 +204,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Kelas Kereta"
+                style="@style/text_semibold"
+                android:paddingBottom="3dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/kelas_kereta"
+                android:hint="Nama Kereta"
+                android:background="@drawable/input_white"
+                android:padding="12dp"
+                android:textSize="15sp"
+                android:layout_marginBottom="10dp"
+                android:textColorHint="@color/gray"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Nama Kereta"
                 style="@style/text_semibold"
                 android:paddingBottom="3dp"/>
